Mac: Inset Harmony bubble anchors by 1 DIP in the X direction.

Currently the harmony-style bubbles do not quite align correctly.

An inset is required because the border stroke of the omnibox is
inside its frame, but bubbles have no border stroke (the bubble
border is part of the shadow drawn by the window server; outside the
bubble frame).

But only the X direction is inset. In the Y direction,a 1 DIP "gap"
must be kept, otherwise the "border" stroke from the window server
shadow would be drawn inside the omnibox.

Note the omnibox drawing code on Mac has some quirks in hidpi and
when it draws a focus ring, which will be addressed in a follow-up
to improve the anchoring appearance there.

Bug: 761701
Change-Id: I055ab62fa525b5c39fa725033ca1ed87d4ad4316
Reviewed-on: https://chromium-review.googlesource.com/648910
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499752}
Former-commit-id: f59e7eb5228dac859d2700e1ea32125c4d0d92d7